Import of LUSHE/Egg-Release-0.24 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      0.24
gitpan-cpan-path:         LUSHE/Egg-Release-0.24.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -31,6 +31,7 @@ requires:
   HTTP::Headers: 0
   IO::Scalar: 0
   Jcode: 0
+  ModPerl::VersionUtil: 0
   Module::Install: 0
   NEXT: 0
   Test::More: 0
@@ -38,4 +39,4 @@ requires:
   UNIVERSAL::require: 0
   URI: 0
   YAML: 0
-version: 0.22
+version: 0.24
