Import of LUSHE/Egg-Release-2.06 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.06
gitpan-cpan-path:         LUSHE/Egg-Release-2.06.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Egg-Release
-version: 2.05
+version: 2.06
 author:
   - 'Masatoshi Mizuno E<lt>lusheE<64>cpan.orgE<gt>'
 abstract: Version of Egg WEB Application Framework.
@@ -40,7 +40,7 @@ requires:
 provides:
   Egg:
     file: lib/Egg.pm
-    version: 2.02
+    version: 2.03
   Egg::Base:
     file: lib/Egg/Base.pm
     version: 2.01
@@ -108,10 +108,10 @@ provides:
     file: lib/Egg/Plugin/DBI/Easy.pm
   Egg::Plugin::DBI::Transaction:
     file: lib/Egg/Plugin/DBI/Transaction.pm
-    version: 2.00
+    version: 2.01
   Egg::Plugin::Debugging:
     file: lib/Egg/Plugin/Debugging.pm
-    version: 2.00
+    version: 2.01
   Egg::Plugin::Debugging::Report:
     file: lib/Egg/Plugin/Debugging/Report.pm
     version: 2.00
@@ -172,7 +172,7 @@ provides:
     version: 2.00
   Egg::Plugin::Log:
     file: lib/Egg/Plugin/Log.pm
-    version: 2.01
+    version: 2.02
   Egg::Plugin::Log::handler:
     file: lib/Egg/Plugin/Log.pm
   Egg::Plugin::Pod::HTML:
@@ -185,6 +185,9 @@ provides:
     version: 2.00
   Egg::Plugin::Redirect::Body:
     file: lib/Egg/Plugin/Redirect/Body.pm
+    version: 2.00
+  Egg::Plugin::Request::ServerPort:
+    file: lib/Egg/Plugin/Request/ServerPort.pm
     version: 2.00
   Egg::Plugin::Tools:
     file: lib/Egg/Plugin/Tools.pm
@@ -208,7 +211,7 @@ provides:
     version: 2.00
   Egg::Release:
     file: lib/Egg/Release.pm
-    version: 2.05
+    version: 2.06
   Egg::Request:
     file: lib/Egg/Request.pm
     version: 2.01
